Módulo de ventas

--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -76,8 +76,7 @@
                     <th>ID</th>
                     <th>Nombre</th>
                     <th>Correo</th>
-                    <th>Tipo Doc.</th>
-                    <th>N° Documento</th>
+                    <th>Documento</th>
                     <th>Estado</th>
                     <th>Acciones</th>
                   </tr>
