--- a/src/main/resources/static/css/empresa.css
+++ b/src/main/resources/static/css/empresa.css
@@ -19,7 +19,7 @@
   object-fit: cover;
 }
 .sidebar-preview-img {
-  border: 1px dashed #0d6efd;
+  border: 1px dashed #ac9c8d;
   border-radius: 0.375rem;
   padding: 2px;
 }
